--- a/bautomate.html
+++ b/bautomate.html
@@ -74,6 +74,50 @@
 }
 
 
+
+.banner {
+  position: relative;
+  height: 100vh;
+}
+
+.banner-img {
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.banner-img::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(20, 20, 22, 0.7); /* Overlay */
+}
+
+.banner-content {
+  position: relative;
+  z-index: 2;
+  padding: 160px 0;
+  text-align: center;
+}
+
+.banner-content h1 {
+  font-size: 90px;
+  line-height: 100px;
+}
+
+.banner-content p {
+  font-size: 18px;
+  max-width: 800px;
+  margin: 20px auto 0;
+}
 </style>
 
 <!-- inject css end -->
@@ -261,42 +305,24 @@
 
 <!--hero section start-->
 
-<section class="banner-slider py-0">
-  <div class="banner-owl-slider owl-carousel no-pb" data-dots="false" data-nav="true">
-    <div class="item">
-      <div class="slider-img" data-bg-img="images/Bautomate/02.png"></div>
-      <div class="banner-content">
-        <div class="container">
-          <div class="row justify-content-center text-center">
-            <div class="col-xl-10 col-lg-12 col-12">
-              <h1 class="mb-4 mt-5">Bautomate</h1>
-              <p class="mt-5">Bautomate optimizes business processes like HR, accounts payable, and document management to achieve strategic goals. It integrates systems via database access, APIs, and development support.</p>
-              <div class="btn-box mt-5">
-                <a class="white-btn" href="#">Get Started </a>
-              </div>
+<section class="banner py-0">
+  <div class="banner-img" style="background-image: url('images/Bautomate/02.png');">
+    <div class="banner-content">
+      <div class="container">
+        <div class="row justify-content-center text-center">
+          <div class="col-xl-10 col-lg-12 col-12">
+            <h1 class="mb-4 mt-5">Bautomate</h1>
+            <p class="mt-5">Bautomate optimizes business processes like HR, accounts payable, and document management to achieve strategic goals. It integrates systems via database access, APIs, and development support.</p>
+            <div class="btn-box mt-5">
+              <a class="white-btn" href="#">Get Started</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="item">
-        <div class="slider-img" data-bg-img="images/Bautomate/01.png"></div>
-        <div class="banner-content">
-          <div class="container">
-            <div class="row justify-content-center text-center">
-              <div class="col-xl-10 col-lg-12 col-12">
-                <h1 class="mb-4 mt-5">Bautomate</h1>
-                <p class="mt-5">Bautomate optimizes business processes like HR, accounts payable, and document management to achieve strategic goals. It integrates systems via database access, APIs, and development support.</p>
-                <div class="btn-box mt-5">
-                  <a class="white-btn" href="#">Get Started </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
   </div>
 </section>
+
 
 <!--hero section end--> 
 
@@ -319,7 +345,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="featured-item style-4">
                     <div class="featured-icon">
-                        <i class="fas fa-vr-cardboard"></i>
+                      <i class="fas fa-robot"></i> 
                         <span class="feature-number">01</span>
                     </div>
                     <div class="featured-desc">
@@ -335,7 +361,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="featured-item style-4">
                     <div class="featured-icon">
-                        <i class="fas fa-cube"></i>
+                      <i class="fas fa-file-alt"></i>
                         <span class="feature-number">02</span>
                     </div>
                     <div class="featured-desc">
@@ -352,7 +378,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="featured-item style-4">
                     <div class="featured-icon">
-                        <i class="fas fa-compass"></i>
+                      <i class="fas fa-folder-open"></i> 
                         <span class="feature-number">03</span>
                     </div>
                     <div class="featured-desc">
@@ -368,7 +394,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="featured-item style-4">
                     <div class="featured-icon">
-                        <i class="fas fa-gamepad"></i>
+                      <i class="fas fa-cogs"></i>
                         <span class="feature-number">04</span>
                     </div>
                     <div class="featured-desc">
