--- a/innomaint.html
+++ b/innomaint.html
@@ -48,6 +48,52 @@
 
   <!-- inject css end -->
 
+  <style>
+    .banner {
+  position: relative;
+  height: 100vh;
+}
+
+.banner-img {
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.banner-img::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(20, 20, 22, 0.7); /* Overlay */
+}
+
+.banner-content {
+  position: relative;
+  z-index: 2;
+  padding: 160px 0;
+  text-align: center;
+}
+
+.banner-content h1 {
+  font-size: 90px;
+  line-height: 100px;
+}
+
+.banner-content p {
+  font-size: 18px;
+  max-width: 800px;
+  margin: 20px auto 0;
+}
+  </style>
+
 </head>
 
 <body>
@@ -229,42 +275,18 @@
 
 
     <!--hero section start-->
-
-    <section class="banner-slider py-0">
-      <div class="banner-owl-slider owl-carousel no-pb" data-dots="false" data-nav="true">
-        <div class="item">
-          <div class="slider-img" data-bg-img="images/innomaint/bg1.png"></div>
-          <div class="banner-content">
-            <div class="container">
-              <div class="row justify-content-center text-center">
-                <div class="col-xl-10 col-lg-12 col-12">
-                  <h1 class="mb-4">Innomaint</h1>
-                  <p st>InnoMaint is a cloud-based FACILITY/SERVICE management software that Monitor, Measure and Manage
-                    all your maintenance/service activities associated with facility, equipment, service technicians and
-                    execution of the business from anywhere, at anytime through web and mobile application</p>
-                  <div class="btn-box mt-5">
-
-                    <a class="white-btn" href="#">Get Started </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="slider-img" data-bg-img="images/innomaint/bg2.png"></div>
-          <div class="banner-content">
-            <div class="container">
-              <div class="row justify-content-center text-center">
-                <div class="col-xl-10 col-lg-12 col-12">
-                  <h1 class="mb-4">Innomaint</h1>
-                  <p>InnoMaint is a cloud-based FACILITY/SERVICE management software that Monitor, Measure and Manage
-                    all your maintenance/service activities associated with facility, equipment, service technicians and
-                    execution of the business from anywhere, at anytime through web and mobile application</p>
-                  <div class="btn-box mt-5">
-
-                    <a class="white-btn" href="#">Get Started </a>
-                  </div>
+    <section class="banner py-0">
+      <div class="banner-img" style="background-image: url('images/Bautomate/02.png');">
+        <div class="banner-content">
+          <div class="container">
+            <div class="row justify-content-center text-center">
+              <div class="col-xl-10 col-lg-12 col-12">
+                <h1 class="mb-4 mt-5">Innomaint</h1>
+                <p class="mt-5">InnoMaint is a cloud-based FACILITY/SERVICE management software that Monitor, Measure and Manage
+                  all your maintenance/service activities associated with facility, equipment, service technicians and
+                  execution of the business from anywhere, at anytime through web and mobile application.</p>
+                <div class="btn-box mt-5">
+                  <a class="white-btn" href="#">Get Started</a>
                 </div>
               </div>
             </div>
