edi commend lines added

--- a/Electronic-Data-Interchange.html
+++ b/Electronic-Data-Interchange.html
@@ -247,7 +247,7 @@ Icon for services and Projects -->
 <!--header end-->
 
 
-<!--hero section start-->
+<!------------------------------------------------------------------------hero section start------------------------------------------------------->
 
 <section class="page-title" data-bg-img="images/services_Images/EDI/banner1.jpg">
   <div class="container">
@@ -270,59 +270,68 @@ Icon for services and Projects -->
   <!-- / .container -->
 </section>
 
-<!--hero section end--> 
+<!----------------------------------------------------------hero section end--------------------------------------------------------------> 
+
+
+
 <!--body content start-->
 
 <div class="page-content">
 
-<!--blog start-->
+<!----------------------------------------------------------------blog start---------------------------------------------------------------------------------->
 
 <section>
   <div class="container ">
     <div class="row">
       <div class="col-12 col-lg-9 mb-6 mb-lg-0 order-lg-1 ps-lg-5">
         <div class="service-item">
-            <div class="service-image mb-5" style="width: 100%; height: 80%; position: relative;">
-                <img src="images/services_Images/EDI/banner2.jpg" class="img-fluid" alt="..." style="height: 430px; object-fit: cover; width: 100%;">
-                <!-- Overlay Text -->
-                <p class="overlay-text mb-0 justify-content-evenly" style="text-align: justify; margin-top: 40px;">
-                    SMI offers a powerful EDI software solution that seamlessly manages every aspect of the EDI process, integrating all your back-end systems including ERP, accounting, marketing, and more. Our solution streamlines data exchange, improving efficiency and connectivity across your entire business ecosystem
-                </p>
-            </div>
+          <div class="service-image mb-5" style="width: 100%; height: 80%; position: relative;">
+            <img src="images/services_Images/EDI/banner2.jpg" class="img-fluid" alt="..." style="height: 430px; object-fit: cover; width: 100%;">
+            <!-- Overlay Text -->
+            <p class="overlay-text mb-0 justify-content-evenly" style="text-align: justify; margin-top: 40px;">
+              SMI offers a powerful EDI software solution that seamlessly manages every aspect of the EDI process, integrating all your back-end systems including ERP, accounting, marketing, and more. Our solution streamlines data exchange, improving efficiency and connectivity across your entire business ecosystem
+            </p>
+          </div>
         </div>
-    </div>
-<style>
-  /* For desktop view, position the text over the image */
-@media (min-width: 992px) {
-    .service-image {
-        position: relative;
-    }
-
-    .overlay-text {
-        position: absolute;
-        top: 65%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
-        color: white;
-        padding: 20px;
-        max-width: 90%; /* Optional: Limit text width */
-        width:100% ;
-        text-align: justify;
-    }
+      </div>
+      <style>
+        /* For desktop view, position the text over the image */
+        @media (min-width: 992px) {
+          .service-image {
+            position: relative;
+          }
+          
+          .overlay-text {
+            position: absolute;
+            top: 65%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
+            color: white;
+            padding: 20px;
+            max-width: 90%; /* Optional: Limit text width */
+            width:100% ;
+            text-align: justify;
+          }
 }
 
 /* For mobile and tablet views, text remains below the image */
 @media (max-width: 991px) {
-    .overlay-text {
-        position: relative;
-        background: none;
-        color: inherit;
-        padding: 0;
-    }
+  .overlay-text {
+    position: relative;
+    background: none;
+    color: inherit;
+    padding: 0;
+  }
 }
 
 </style>    
+<!----------------------------------------------------------------blog end---------------------------------------------------------------------------------->
+
+
+
+
+
       <div class="col-12 col-lg-3">
         <div class="service-widget widget widget_nav_menu">
           <ul id="menu-services-menu" class="menu mb-0">
@@ -554,7 +563,7 @@ Icon for services and Projects -->
 
 
 
-
+<!-- --------------------------------------------------EDI Health care temp code for the modal style --------------------------------------- -->
 
 
 <!-- Modal Structure for Transparency -->
@@ -578,15 +587,15 @@ Icon for services and Projects -->
   .modal-content {
     border-radius: 10px;
   }
-
+  
   .modal-header {
     border-bottom: none;
   }
-
+  
   .modal-body p {
     font-size: 0.95rem;
   }
-
+  
   /* Responsive Margin for Mobile View */
   @media (max-width: 767px) {
     .modal-dialog {
@@ -600,7 +609,16 @@ Icon for services and Projects -->
       height: auto; /* Maintain aspect ratio */
     }
   }
-</style>
+  </style>
+<!-- --------------------------------------------------EDI Health care temp code for the modal style --------------------------------------- -->
+
+
+
+
+
+
+
+
 <!-- Modal Structure for Delivery and Deadlines -->
 <div class="modal fade project-modal" id="socialMediaModal" tabindex="-1" aria-labelledby="deliveryModalLabel" aria-hidden="true">
   <div class="modal-dialog project-modal-dialog">
