--- a/Enterprise-Integration-Services.html
+++ b/Enterprise-Integration-Services.html
@@ -595,53 +595,66 @@
 
 
 
-<!-- Modal Structure for Transparency -->
-<div class="modal fade project-modal" id="mobileModal" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-  <div class="modal-dialog project-modal-dialog">
+<div class="modal fade model-popup project-modal" id="mobileModal" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
+  <div class="modal-dialog project-modal-dialog wide-modal-dialog">
     <div class="modal-content project-modal-content">
       <div class="modal-header project-modal-header">
         <h5 class="modal-title" id="mobileModalLabel">Transparency</h5>
         <button type="button" class="btn-close project-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body project-modal-body">
-        <img src="images/services_Images/EIS/d1.jpg" alt="Transparency Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
-        <p style="font-size: 1.2em; text-align: justify; margin-top: 15px;">Stay informed throughout the development process. You’ll have full visibility into where every development hour is spent and what features are being added. We ensure you're updated at every step.</p>
+        <div class="project-image-container">
+          <img src="images/services_Images/EIS/d1.jpg" alt="Transparency Image" class="img-fluid project-image">
+        </div>
+        <div class="project-content">
+          <p>Stay informed throughout the development process. You’ll have full visibility into where every development hour is spent and what features are being added. We ensure you're updated at every step.</p>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Modal Structure for Delivery and Deadlines -->
-<div class="modal fade project-modal" id="socialMediaModal" tabindex="-1" aria-labelledby="deliveryModalLabel" aria-hidden="true">
-  <div class="modal-dialog project-modal-dialog">
+
+
+<div class="modal fade model-popup project-modal" id="socialMediaModal" tabindex="-1" aria-labelledby="deliveryModalLabel" aria-hidden="true">
+  <div class="modal-dialog project-modal-dialog wide-modal-dialog">
     <div class="modal-content project-modal-content">
       <div class="modal-header project-modal-header">
         <h5 class="modal-title" id="socialMediaModalLabel">Delivery and Deadlines</h5>
         <button type="button" class="btn-close project-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body project-modal-body">
-        <img src="images/services_Images/EIS/d2.jpg" alt="Delivery Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
-        <p style="font-size: 1.2em; text-align: justify; margin-top: 15px;">We maintain an unwavering commitment to quality and deadlines. Our goal is to deliver a product on time, without compromising on excellence.</p>
+        <div class="project-image-container">
+          <img src="images/services_Images/EIS/d2.jpg" alt="Delivery Image" class="img-fluid project-image">
+        </div>
+        <div class="project-content">
+          <p>We maintain an unwavering commitment to quality and deadlines. Our goal is to deliver a product on time, without compromising on excellence.</p>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Modal Structure for Scalability -->
-<div class="modal fade project-modal" id="automobileModal" tabindex="-1" aria-labelledby="scalabilityModalLabel" aria-hidden="true">
-  <div class="modal-dialog project-modal-dialog">
+
+<div class="modal fade model-popup project-modal" id="automobileModal" tabindex="-1" aria-labelledby="scalabilityModalLabel" aria-hidden="true">
+  <div class="modal-dialog project-modal-dialog wide-modal-dialog">
     <div class="modal-content project-modal-content">
       <div class="modal-header project-modal-header">
         <h5 class="modal-title" id="scalabilityModalLabel">Scalability</h5>
         <button type="button" class="btn-close project-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body project-modal-body">
-        <img src="images/services_Images/EIS/d3.jpg" alt="automobileModalLabel" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
-        <p style="font-size: 1.2em; text-align: justify; margin-top: 15px;">We help you establish scalable service levels, enhance flexibility, and build sustainable supply chains with seamless mobility solutions.</p>
+        <div class="project-image-container">
+          <img src="images/services_Images/EIS/d3.jpg" alt="Scalability Image" class="img-fluid project-image">
+        </div>
+        <div class="project-content">
+          <p>We help you establish scalable service levels, enhance flexibility, and build sustainable supply chains with seamless mobility solutions.</p>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
 
 <!--blog end-->
 
