--- a/Ruby-on-Rails.html
+++ b/Ruby-on-Rails.html
@@ -612,52 +612,65 @@ Icon for services and Projects -->
 
 
 <!-- Modal Structure for Transparency -->
-<div class="modal fade project-modal" id="mobileModal" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-  <div class="modal-dialog project-modal-dialog">
+<div class="modal model-popup fade project-modal" id="mobileModal" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
+  <div class="modal-dialog project-modal-dialog wide-modal-dialog">
     <div class="modal-content project-modal-content">
       <div class="modal-header project-modal-header">
         <h5 class="modal-title" id="mobileModalLabel">24/7 Expert Support</h5>
         <button type="button" class="btn-close project-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body project-modal-body">
-        <img src="images/services_Images/Rubyonrails/s1.jpg" alt="Transparency Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
-        <p style="font-size: 1.2em; text-align: justify; margin-top: 15px;">Access round-the-clock support via phone, live chat, email, or through our extensive library of demo videos and webinars.</p>
+        <div class="project-image-container">
+          <img src="images/services_Images/Rubyonrails/s1.jpg" alt="Transparency Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+        </div>
+        <div class="project-content">
+          <p>Access round-the-clock support via phone, live chat, email, or through our extensive library of demo videos and webinars.</p>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
 <!-- Modal Structure for Delivery and Deadlines -->
-<div class="modal fade project-modal" id="socialMediaModal" tabindex="-1" aria-labelledby="deliveryModalLabel" aria-hidden="true">
-  <div class="modal-dialog project-modal-dialog">
+<div class="modal model-popup fade project-modal" id="socialMediaModal" tabindex="-1" aria-labelledby="deliveryModalLabel" aria-hidden="true">
+  <div class="modal-dialog project-modal-dialog wide-modal-dialog">
     <div class="modal-content project-modal-content">
       <div class="modal-header project-modal-header">
         <h5 class="modal-title" id="socialMediaModalLabel">Evaluate and Improve</h5>
         <button type="button" class="btn-close project-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body project-modal-body">
-        <img src="images/services_Images/Rubyonrails/s2.jpg" alt="Delivery Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
-        <p style="font-size: 1.2em; text-align: justify; margin-top: 15px;">We assess your current codebase and offer actionable insights to enhance its quality and performance.</p>
+        <div class="project-image-container">
+          <img src="images/services_Images/Rubyonrails/s2.jpg" alt="Delivery Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+        </div>
+        <div class="project-content">
+          <p>We assess your current codebase and offer actionable insights to enhance its quality and performance.</p>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
 <!-- Modal Structure for Scalability -->
-<div class="modal fade project-modal" id="automobileModal" tabindex="-1" aria-labelledby="scalabilityModalLabel" aria-hidden="true">
-  <div class="modal-dialog project-modal-dialog">
+<div class="modal fade model-popup project-modal" id="automobileModal" tabindex="-1" aria-labelledby="scalabilityModalLabel" aria-hidden="true">
+  <div class="modal-dialog project-modal-dialog wide-modal-dialog">
     <div class="modal-content project-modal-content">
       <div class="modal-header project-modal-header">
         <h5 class="modal-title" id="scalabilityModalLabel">Transparency</h5>
         <button type="button" class="btn-close project-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body project-modal-body">
-        <img src="images/services_Images/Rubyonrails/s3.jpg" alt="automobileModalLabel" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
-        <p style="font-size: 1.2em; text-align: justify; margin-top: 15px;">Stay informed with regular communication from our team, ensuring you’re involved and updated at every stage of your project.</p>
+        <div class="project-image-container">
+          <img src="images/services_Images/Rubyonrails/s3.jpg" alt="automobileModalLabel" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+        </div>
+        <div class="project-content">
+          <p>Stay informed with regular communication from our team, ensuring you’re involved and updated at every stage of your project.</p>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
 
 <!--blog end-->
 
