--- a/Electronic-Data-Interchange.html
+++ b/Electronic-Data-Interchange.html
@@ -247,11 +247,11 @@ Icon for services and Projects -->
 <!--header end-->
 
 
-<!------------------------------------------------------------------------hero section start------------------------------------------------------->
+<!--hero section start-->
 
 <section class="page-title" data-bg-img="images/services_Images/EDI/banner1.jpg">
   <div class="container">
-    <div class="row justify-content-center text-center" style="margin-top: 80px;">
+    <div class="row justify-content-center text-center">
       <div class="col-lg-8">
         <div class="theme-breadcrumb-box">
         <h1>Electronic Data Interchange </h1>
@@ -270,68 +270,25 @@ Icon for services and Projects -->
   <!-- / .container -->
 </section>
 
-<!----------------------------------------------------------hero section end--------------------------------------------------------------> 
-
-
-
+<!--hero section end--> 
 <!--body content start-->
 
 <div class="page-content">
 
-<!----------------------------------------------------------------blog start---------------------------------------------------------------------------------->
+<!--blog start-->
 
 <section>
   <div class="container ">
     <div class="row">
       <div class="col-12 col-lg-9 mb-6 mb-lg-0 order-lg-1 ps-lg-5">
         <div class="service-item">
-          <div class="service-image mb-5" style="width: 100%; height: 80%; position: relative;">
-            <img src="images/services_Images/EDI/banner2.jpg" class="img-fluid" alt="..." style="height: 430px; object-fit: cover; width: 100%;">
-            <!-- Overlay Text -->
-            <p class="overlay-text mb-0 justify-content-evenly" style="text-align: justify; margin-top: 40px;">
-              SMI offers a powerful EDI software solution that seamlessly manages every aspect of the EDI process, integrating all your back-end systems including ERP, accounting, marketing, and more. Our solution streamlines data exchange, improving efficiency and connectivity across your entire business ecosystem
-            </p>
+          <div class="service-image mb-5">
+            <img src="images/services_Images/EDI/banner2.jpg" class="img-fluid" alt="...">
           </div>
+          <p class="mb-0">SMI offers a powerful EDI software solution that seamlessly manages every aspect of the EDI process, integrating all your back-end systems including ERP, accounting, marketing, and more. Our solution streamlines data exchange, improving efficiency and connectivity across your entire business ecosystem</p>
+          
         </div>
       </div>
-      <style>
-        /* For desktop view, position the text over the image */
-        @media (min-width: 992px) {
-          .service-image {
-            position: relative;
-          }
-          
-          .overlay-text {
-            position: absolute;
-            top: 65%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
-            color: white;
-            padding: 20px;
-            max-width: 90%; /* Optional: Limit text width */
-            width:100% ;
-            text-align: justify;
-          }
-}
-
-/* For mobile and tablet views, text remains below the image */
-@media (max-width: 991px) {
-  .overlay-text {
-    position: relative;
-    background: none;
-    color: inherit;
-    padding: 0;
-  }
-}
-
-</style>    
-<!----------------------------------------------------------------blog end---------------------------------------------------------------------------------->
-
-
-
-
-
       <div class="col-12 col-lg-3">
         <div class="service-widget widget widget_nav_menu">
           <ul id="menu-services-menu" class="menu mb-0">
@@ -359,7 +316,6 @@ Icon for services and Projects -->
     </div>
   </div>
 </section>
-
 
 <section>
     <div class="container">
@@ -563,93 +519,71 @@ Icon for services and Projects -->
 
 
 
-<!-- --------------------------------------------------EDI Health care temp code for the modal style --------------------------------------- -->
+
 
 
 <!-- Modal Structure for Transparency -->
-<div class="modal fade" id="mobileModal" tabindex="-1" aria-labelledby="mobileModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <!-- Modal Header -->
-      <div class="modal-header p-3">
-        <h5 class="modal-title " id="mobileModalLabel" style="color: black;">EDI for Healthcare</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+<div class="modal fade model-popup project-modal" id="mobileModal" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
+  <div class="modal-dialog project-modal-dialog wide-modal-dialog">
+    <div class="modal-content project-modal-content">
+      <div class="modal-header project-modal-header">
+        <h5 class="modal-title" id="mobileModalLabel">EDI for Healthcare</h5>
+        <button type="button" class="btn-close project-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <!-- Modal Body -->
-      <div class="modal-body p-3 text-center">
-        <img src="images/services_Images/EDI/d1.jpg" alt="EDI for Healthcare" class="img-fluid mb-3 rounded-3" style="max-width: 350px; height: 300px;">
-        <p class="text-muted " style="font-size: 1rem; text-align: justify;">SMI implemented modules for healthcare, ensuring compatibility with HSA systems and supporting additional needs, including lines of credit. HSA claims are integrated for seamless transmission to online applications while maintaining EDI compliance.</p>
+      <div class="modal-body project-modal-body">
+        <div class="project-image-container">
+        <img src="images/services_Images/EDI/d1.jpg" alt="Transparency Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+      </div>
+      <div class="project-content">
+        <p >For the healthcare industry, SMI implemented distinct modules tailored to various scenarios, ensuring compatibility with existing HSA systems and additional business needs, such as lines of credit. We integrated HSA claims through a horizontal integration design, allowing calculations, transformations, and seamless transmission to online applications. All transformations and mapping rules were designed to maintain EDI compliance.</p>
+      </div>
       </div>
     </div>
   </div>
 </div>
-<style>
-  .modal-content {
-    border-radius: 10px;
-  }
-  
-  .modal-header {
-    border-bottom: none;
-  }
-  
-  .modal-body p {
-    font-size: 0.95rem;
-  }
-  
-  /* Responsive Margin for Mobile View */
-  @media (max-width: 767px) {
-    .modal-dialog {
-      margin: 0 15px; /* Adds margin on the sides */
-    }
-    .modal-body {
-      padding: 20px; /* Ensure padding is not too tight on mobile */
-    }
-    .modal-body img {
-      max-width: 100%; /* Make the image responsive */
-      height: auto; /* Maintain aspect ratio */
-    }
-  }
-  </style>
-<!-- --------------------------------------------------EDI Health care temp code for the modal style --------------------------------------- -->
-
-
-
-
-
-
-
 
 <!-- Modal Structure for Delivery and Deadlines -->
-<div class="modal fade project-modal" id="socialMediaModal" tabindex="-1" aria-labelledby="deliveryModalLabel" aria-hidden="true">
-  <div class="modal-dialog project-modal-dialog">
+<div  class="modal model-popup fade project-modal" id="socialMediaModal" tabindex="-1" aria-labelledby="deliveryModalLabel" aria-hidden="true">
+  <div class="modal-dialog project-modal-dialog wide-modal-dialog">
     <div class="modal-content project-modal-content">
       <div class="modal-header project-modal-header">
         <h5 class="modal-title" id="socialMediaModalLabel">EDI for Manufacturing</h5>
         <button type="button" class="btn-close project-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body project-modal-body">
+        <div class="project-image-container">
         <img src="images/services_Images/EDI/d2.jpg" alt="Delivery Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
-        <p style="font-size: 1.2em; text-align: justify; margin-top: 15px;">In the manufacturing sector, SMI utilized the Smooks data integration tool to efficiently convert EDI files into comma-separated (CSV) formats. Through the use of Java scripts, large volumes of CSV files were loaded into the database in seconds. The system can import very large CSV files in under 60 seconds, delivering significant time savings to the client.</p>
       </div>
+        <div class="project-content">
+          <p >In the manufacturing sector, SMI utilized the Smooks data integration tool to efficiently convert EDI files into comma-separated (CSV) formats. Through the use of Java scripts, large volumes of CSV files were loaded into the database in seconds. The system can import very large CSV files in under 60 seconds, delivering significant time savings to the client.</p>
+        </div>
+        </div>
     </div>
   </div>
 </div>
 
 <!-- Modal Structure for Scalability -->
-<div class="modal fade project-modal" id="automobileModal" tabindex="-1" aria-labelledby="scalabilityModalLabel" aria-hidden="true">
-  <div class="modal-dialog project-modal-dialog">
+<div class="modal fade model-popup project-modal" id="automobileModal" tabindex="-1" aria-labelledby="scalabilityModalLabel" aria-hidden="true">
+  <div class="modal-dialog project-modal-dialog wide-modal-dialog">
     <div class="modal-content project-modal-content">
       <div class="modal-header project-modal-header">
         <h5 class="modal-title" id="scalabilityModalLabel">EDI for the Automobile Industry</h5>
         <button type="button" class="btn-close project-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body project-modal-body">
-        <img src="images/services_Images/EDI/d3.jpg" alt="automobileModalLabel" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
-        <p style="font-size: 1.2em; text-align: justify; margin-top: 15px;">SMI streamlined the automobile industry’s processes through kitting, a method that consolidates various sub/vendor-based systems. After thorough analysis of vendor business processes, we implemented a solution that reduced operational costs. The batching concept played a crucial role in ensuring the success of this project.</p>
+        <!-- Image Section (Left) -->
+        <div class="project-image-container">
+          <img src="images/services_Images/EDI/d3.jpg" alt="automobileModalLabel" class="img-fluid project-image">
+        </div>
+        <!-- Text Section (Right) -->
+        <div class="project-content">
+          <p>SMI streamlined the automobile industry’s processes through kitting, a method that consolidates various sub/vendor-based systems. After thorough analysis of vendor business processes, we implemented a solution that reduced operational costs. The batching concept played a crucial role in ensuring the success of this project.</p>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
 
 <!--blog end-->
 
