--- a/ar&vr-services.html
+++ b/ar&vr-services.html
@@ -478,52 +478,65 @@
 
 
 <!-- Modal Structure for Transparency -->
-<div class="modal fade project-modal" id="mobileModal" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-  <div class="modal-dialog project-modal-dialog">
+<div class="modal model-popup fade project-modal" id="mobileModal" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
+  <div class="modal-dialog project-modal-dialog wide-modal-dialog">
     <div class="modal-content project-modal-content">
       <div class="modal-header project-modal-header">
         <h5 class="modal-title" id="mobileModalLabel">Bike Assembly in VR</h5>
         <button type="button" class="btn-close project-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body project-modal-body">
-        <img src="images/services_Images/ARVRImages/p1.jpg" alt="Transparency Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
-        <p style="font-size: 1.2em; text-align: justify; margin-top: 15px;">An immersive virtual training program designed for the automobile and service industries, allowing users to experience bike assembly in a highly interactive, realistic 3D environment—perfect for enhancing skills without the need for physical resources.</p>
+        <div class="project-image-container">
+          <img src="images/services_Images/ARVRImages/p1.jpg" alt="Transparency Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+        </div>
+        <div class="project-content">
+          <p>An immersive virtual training program designed for the automobile and service industries, allowing users to experience bike assembly in a highly interactive, realistic 3D environment—perfect for enhancing skills without the need for physical resources.</p>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
 <!-- Modal Structure for Delivery and Deadlines -->
-<div class="modal fade project-modal" id="socialMediaModal" tabindex="-1" aria-labelledby="deliveryModalLabel" aria-hidden="true">
-  <div class="modal-dialog project-modal-dialog">
+<div class="modal fade model-popup project-modal" id="socialMediaModal" tabindex="-1" aria-labelledby="deliveryModalLabel" aria-hidden="true">
+  <div class="modal-dialog project-modal-dialog wide-modal-dialog">
     <div class="modal-content project-modal-content">
       <div class="modal-header project-modal-header">
         <h5 class="modal-title" id="socialMediaModalLabel">Motion Tracking Application</h5>
         <button type="button" class="btn-close project-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body project-modal-body">
-        <img src="images/services_Images/ARVRImages/p2.jpg" alt="Delivery Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
-        <p style="font-size: 1.2em; text-align: justify; margin-top: 15px;">A cutting-edge application that uses hand gesture and body movement tracking to interact with television content. This innovative solution allows users to view, engage, and share experiences in a fully immersive way.</p>
+        <div class="project-image-container">
+          <img src="images/services_Images/ARVRImages/p2.jpg" alt="Delivery Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+        </div>
+        <div class="project-content">
+          <p>A cutting-edge application that uses hand gesture and body movement tracking to interact with television content. This innovative solution allows users to view, engage, and share experiences in a fully immersive way.</p>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Modal Structure for Scalability -->
-<div class="modal fade project-modal" id="automobileModal" tabindex="-1" aria-labelledby="scalabilityModalLabel" aria-hidden="true">
-  <div class="modal-dialog project-modal-dialog">
+
+<div class="modal fade model-popup project-modal" id="automobileModal" tabindex="-1" aria-labelledby="scalabilityModalLabel" aria-hidden="true">
+  <div class="modal-dialog project-modal-dialog wide-modal-dialog">
     <div class="modal-content project-modal-content">
       <div class="modal-header project-modal-header">
         <h5 class="modal-title" id="scalabilityModalLabel">Crane Simulation</h5>
         <button type="button" class="btn-close project-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body project-modal-body">
-        <img src="images/services_Images/ARVRImages/p3.jpg" alt="automobileModalLabel" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
-        <p style="font-size: 1.2em; text-align: justify; margin-top: 15px;">A state-of-the-art training solution focused on crane operations and safety. The Flat-top Tower Crane Simulator provides hands-on learning for essential crane tasks, including safe lifting, load chart usage, blind lifts, and 2-part/4-part line operations, effectively preparing operators for real-world scenarios.</p>
+        <div class="project-image-container">
+          <img src="images/services_Images/ARVRImages/p3.jpg" alt="automobileModalLabel" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+        </div>
+        <div class="project-content">
+          <p>A state-of-the-art training solution focused on crane operations and safety. The Flat-top Tower Crane Simulator provides hands-on learning for essential crane tasks, including safe lifting, load chart usage, blind lifts, and 2-part/4-part line operations, effectively preparing operators for real-world scenarios.</p>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
 
  
       <section class="demopage-content ">
