--- a/articles.html
+++ b/articles.html
@@ -320,7 +320,7 @@
     <div class="row">
       <div class="articles-container">
 
-        <a href="/portfolio-single.html">
+        <a href="/article-visa.html">
           <div class="article-card">
             <!-- <img src="images/articles/visa_passport.jpg" class="article-image"></imgm> -->
             <div class="info">
