--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
                 <div class="row">
                   <div class="col-md-6 mt-10">
                     <img
-                      src="images/about/about-1.jpg"
+                      src="images/about/ret.webp"
                       class="img-fluid rounded"
                       alt=""
                     />
                   </div>
                   <div class="col-md-6">
                     <img
-                      src="images/about/about-2.jpg"
+                      src="images/about/rett.webp"
                       class="img-fluid rounded"
                       alt=""
                     />
@@ -233,7 +233,7 @@
                   <div class="col-md-6">
                     <div class="theme-progress-bar">
                       <h4 class="h4-progress">Projects</h4>
-                      <div class="progress" data-value="92">
+                      <div class="progress" data-value="100">
                         <div class="progress-bar">
                           <div class="progress-parcent"><span>500</span>+</div>
                         </div>
@@ -241,7 +241,7 @@
                     </div>
                     <div class="theme-progress-bar">
                       <h4 class="h4-progress">Happy Clients</h4>
-                      <div class="progress" data-value="98">
+                      <div class="progress" data-value="100">
                         <div class="progress-bar">
                           <div class="progress-parcent"><span>150</span>+</div>
                         </div>
@@ -249,7 +249,7 @@
                     </div>
                     <div class="theme-progress-bar">
                       <h4 class="h4-progress">Global Reach</h4>
-                      <div class="progress" data-value="98">
+                      <div class="progress" data-value="100">
                         <div class="progress-bar">
                           <div class="progress-parcent"><span>40</span>+</div>
                         </div>
