--- a/ar&vr-services.html
+++ b/ar&vr-services.html
@@ -531,7 +531,7 @@
   </div>
 </div>
 
-<section class="background-gray">
+<section class="background-gray" style="padding-top: 1px !important;">
   <div class="container">
     <div class="row justify-content-center text-center mb-5">
       <div class="col-lg-8 col-md-12">
