"Updated image file references in Electronic-Data-Interchange.html and index.html, and replaced ret.webp with avifff.jpg and rettt.png in images/about directory."

--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
                 <div class="row">
                   <div class="col-md-6 mt-10">
                     <img
-                      src="images/about/ret.webp"
+                      src="images/about/avifff.jpg"
                       class="img-fluid rounded"
                       alt=""
                     />
                   </div>
                   <div class="col-md-6">
                     <img
-                      src="images/about/rett.webp"
+                      src="images/about/rettt.png"
                       class="img-fluid rounded"
                       alt=""
                     />
