--- a/Electronic-Data-Interchange.html
+++ b/Electronic-Data-Interchange.html
@@ -250,7 +250,7 @@ Icon for services and Projects -->
 <!--hero section start-->
 <!--hero section start-->
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('images/services_Images/EDI/banner1.jpg');">
+  <div class="banner-img" style="background-image: url('images/services_Images/EDI/banner-1.jpeg');">
     <div class="banner-content">
       <div class="container">
         <div class="row justify-content-center text-center">
