"Added new phone number to contact list"

--- a/index.html
+++ b/index.html
@@ -1305,6 +1305,10 @@
                       <i class="flaticon-phone-call"></i>
                       <a href="tel:+912345678900">+971 50 421 6518</a>
                     </li>
+                    <li>
+                      <i class="flaticon-phone-call"></i>
+                      <a href="tel:+97145543952">+971 4554 3952</a>
+                    </li>
                   </ul>
                 </div>
               </div>
