EIS EDI RUBY AR&VR completed

--- a/Enterprise-Integration-Services.html
+++ b/Enterprise-Integration-Services.html
@@ -381,7 +381,7 @@
           <!-- Webex Service Item -->
           <div class="service-item1 style-1">
             <div class="service-image">
-              <img src="images/services_Images/EIS/d1.jpg" class="img-fluid" alt="" decoding="async">
+              <img src="images/services_Images/Rubyonrails/trans.png" class="img-fluid" alt="" decoding="async">
             </div>
             <div class="service-desc">
               <div class="service-title">
@@ -399,7 +399,7 @@
           <!-- ERP Application Service Item -->
           <div class="service-item1 style-1">
             <div class="service-image">
-              <img src="images/services_Images/EIS/d2.jpg" class="img-fluid" alt="">
+              <img src="images/services_Images/EIS/delivery1.png" class="img-fluid" alt="">
             </div>
             <div class="service-desc">
               <div class="service-title">
@@ -417,7 +417,7 @@
           <!-- DOM Service Item (Active) -->
           <div class="service-item1 style-1 active">
             <div class="service-image">
-              <img src="images/services_Images/EIS/d3.jpg" class="img-fluid" alt="">
+              <img src="images/services_Images/EIS/scale.png" class="img-fluid" alt="">
             </div>
             <div class="service-desc">
               <div class="service-title">
