image chnages completed

--- a/Enterprise-Integration-Services.html
+++ b/Enterprise-Integration-Services.html
@@ -117,7 +117,7 @@
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-xl-10 col-lg-12 col-12">
-            <h1 class="mb-4 mt-5">Enterprise Integration Service</h1>
+            <h1 class="mb-4 mt-5">Enterprise Integration Services</h1>
             <p class="mt-5">Enterprises today demand rapid, seamless integration across their entire ecosystem to ensure that services are available on-demand and delivered as-a-service. Our Enterprise Integration Services tackle these challenges head-on, serving as a crucial technology enabler for digital transformation and business agility.</p>  
           </div>  
         </div>
