--- a/Ruby-on-Rails.html
+++ b/Ruby-on-Rails.html
@@ -484,7 +484,7 @@ Icon for services and Projects -->
       </div>
       <div class="modal-body project-modal-body">
         <div class="project-image-container">
-          <img src="images/services_Images/Rubyonrails/s1.jpg" alt="Student Success Suite Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+          <img src="images/services_Images/Rubyonrails/p1.png" alt="Student Success Suite Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
         </div>
         <div class="project-content">
           <p>
@@ -506,7 +506,7 @@ Icon for services and Projects -->
       </div>
       <div class="modal-body project-modal-body">
         <div class="project-image-container">
-          <img src="images/services_Images/Rubyonrails/s2.jpg" alt="Online Video Course Platform Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+          <img src="images/services_Images/Rubyonrails/p2.png" alt="Online Video Course Platform Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
         </div>
         <div class="project-content">
           <p>
@@ -528,7 +528,7 @@ Icon for services and Projects -->
       </div>
       <div class="modal-body project-modal-body">
         <div class="project-image-container">
-          <img src="images/services_Images/Rubyonrails/s3.jpg" alt="Health Systems Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+          <img src="images/services_Images/Rubyonrails/p3.png" alt="Health Systems Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
         </div>
         <div class="project-content">
           <p>
