add gradient text in article/blog pages

--- a/article-visa.html
+++ b/article-visa.html
@@ -44,6 +44,8 @@
 <!--== theme-style -->
 <link href="css/theme-style.css" rel="stylesheet" type="text/css" />
 
+<link rel="stylesheet" href="css/articles.css" type="text/css">
+
 <!-- inject css end -->
 
 </head>
@@ -466,7 +468,7 @@
     <!-- / .row -->
   </div>
   <!-- / .container -->
-</section> -->
+</section>
 
 <!--hero section end--> 
 
@@ -477,7 +479,9 @@
 
 <!--portfolio start-->
 
-<section>
+<div>
+  
+<section class="articlepage">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -488,7 +492,7 @@
     </div>
     <div class="row mt-8">
       <div>
-        <h3>Overview </h3>
+        <h3 class="gradientText">Overview </h3>
 
         <p>
           The UAE is one of the top destinations for foreigners around the world. This is due to everything it has to offer, from its beautiful landscapes to its grand architecture. Nevertheless, landscapes are not the only attractive thing about the United Arab Emirates. Investors can also find a great business hub when moving to the region. As a result, thanks to its many offerings, there are different types of visa in UAE.
@@ -498,7 +502,7 @@
           In this article, we will be talking about the types of visa in UAE. There are eight types ofubai exit permit visa in Dubai and here we will be discussing each one in depth. It is important that you know which type of visa is the one that is right for you. Therefore, learning about it before soliciting one is crucial. Let us observe:
         </p>
 
-        <h4>Important updates and changes to Dubai visa regulation 2023</h4>
+        <h4 class="gradientText">Important updates and changes to Dubai visa regulation 2023</h4>
 
         <p>The UAE government implemented the upgraded visa system in October 2022, and since then, the visa regulations have undergone a number of modifications. Let us see:</p>
 
@@ -553,7 +557,7 @@
             Since some nations can obtain a visa upon arrival, you must determine whether you need to submit a request for a visit visa prior to making travel arrangements to the UAE. Here are all of your visa options if you want to go on vacation in the UAE.
           </p>
 
-          <h3>Transit Visa – for 48 or 96 hours</h3>
+          <h3 class="gradientText">Transit Visa – for 48 or 96 hours</h3>
 
           <p>
             This is a type of visit visa in UAE. People can send a request for a 48-hour or 96-hour transit visa if they have a quick layover at a local airport. The airline you are flying with in the UAE or a travel agent could help you obtain the visa. However, transit visas are neither renewable or extendable, and you must depart the UAE within 48 or 96 hours of your arrival.
@@ -588,7 +592,7 @@
 
           <!-- --------------------------------------------- -->
 
-          <h3>Tourist Visa - 30 or 90 Days</h3>
+          <h3 class="gradientText">Tourist Visa - 30 or 90 Days</h3>
 
           <p>Learning about a country and its customs may necessitate staying in its area for an extended period of time. However, the only way to lawfully remain in a country is to obtain a visa. Therefore, to do so, can apply for a tourist visa in the UAE.</p>
 
@@ -606,7 +610,7 @@
 
           <!-- ----------------------------------------------- -->
 
-          <h3>Multiple entry – 5 years</h3>
+          <h3 class="gradientText">Multiple entry – 5 years</h3>
             <p>Choosing a long-term multi-entry visa is a simple method to visit the UAE without needing to apply for a new entrance permit each time if you frequently go to the UAE for business or have friends or family who live there.</p>
             <p>Through the ICP’s official website, <a href="https://icp.gov.ae">icp.gov.ae</a>, you can apply for a 5-year multi-entry tourist visa. A visitor with this visa may stay for up to 3 months during each visit, according to the ICP website. This may be prolonged for an additional 90 days.</p>
             <p><b>Major requirement:</b> A bank statement for the previous six months showing a balance of at least $4,000 (AED 14,700) or its substitute in other currencies.</p>
@@ -619,10 +623,10 @@
               <li>Accessible through any port or airport in the UAE.</li>
             </ul>
 
-            <h3>Resident e-visa</h3>
+            <h3 class="gradientText">Resident e-visa</h3>
             <p><b>Eligibility:</b> Residents of GCC nations and their relatives can apply for this visa. Ensure your passport and GCC resident visa are valid for at least 3 months after arrival. The visa allows a 30-day stay, with a one-month validity period from the entry date.</p>
 
-            <h3>4 Possibilities to living in the UAE</h3>
+            <h3 class="gradientText" style="margin-top: 5rem;">4 Possibilities to living in the UAE</h3>
             <p>There are many ways to live in the UAE with different types of visas available. Whether starting a business or seeking employment, here are your options:</p>
 
             <b>Company sponsored visa:</b>
@@ -632,7 +636,7 @@
             <b>Sponsor family visa:</b>
             <p>If you work, own a business, or hold property in the UAE, you can sponsor residency visas for your family, spouse, or children.</p>
 
-            <h3>Golden visa</h3>
+            <h3 class="gradientText">Golden visa</h3>
             <p>For a stable, long-term residence, eligible individuals can apply for the Golden Visa, allowing a 10-year stay with sponsorship for family members and support staff.</p>
             <b>Eligible categories:</b>
             <ul>
@@ -644,7 +648,7 @@
             </ul>
             <p>Golden visa holders enjoy benefits like permanent residency, discounts, and more.</p>
 
-            <h3>Resident visa</h3>
+            <h3 class="gradientText">Resident visa</h3>
             <p>A UAE Residence Visa is essential for foreigners looking to live and work in the UAE long-term, offering benefits like opening bank accounts, securing loans, visa-free travel, enrolling children in schools, and accessing healthcare.</p>
             <b>Types of residence visas:</b>
             <ul>
@@ -654,7 +658,7 @@
               <li><b>Retirement visa:</b> For elderly foreigners meeting financial requirements.</li>
               <li><b>Green visa:</b> Self-sponsoring visa with a 5-year validity, allowing sponsorship of immediate relatives and a 6-month grace period after expiration.</li>
             </ul>
-            <p>If you are looking to obtain any of these visas, we can assist you. <b>Give us a call</b>.</p>
+            <p>If you are looking to obtain any of these visas, we can assist you. <a class="gradientText" href="contact.html"><b>Give us a call</b>.</a></p>
 
 
         </div>
@@ -715,6 +719,8 @@
     </div>
   </div>
 </section>
+</div>
+
 
 <!--portfolio end-->
 
