--- a/blog-volume-hire.html
+++ b/blog-volume-hire.html
@@ -455,7 +455,7 @@
     <div class="row justify-content-center text-center">
       <div class="col-lg-8">
         <div class="theme-breadcrumb-box">
-        <h3>Problem Faced in Volume Hiring -Strategies for Efficient and Effective Recruitment</h3>
+        <h3 class="gradientText">Problem Faced in Volume Hiring -Strategies for Efficient and Effective Recruitment</h3>
         <nav aria-label="breadcrumb" class="page-breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="blog-right-sidebar.html"><i class="las la-home me-1"></i>Blogs</a>
@@ -476,7 +476,7 @@
 
 <!--body content start-->
 
-<div class="page-content">
+<div class="blogpage page-content">
 
 <!--blog start-->
 
@@ -518,7 +518,7 @@
               <p>"studies have found that manual claims processing takes up to 14 days while automated claims processing can take up just a few hours."</p>
             </blockquote> -->
 
-            <h3>Define Clear Job Requirements and Criteria:</h3>
+            <h3 class="gradientText">Define Clear Job Requirements and Criteria:</h3>
 
             <p>
                 Before initiating a volume hiring campaign, it is crucial to establish clear job requirements and criteria. This helps in attracting suitable candidates and filtering out unqualified applicants efficiently. Consider the following steps:
@@ -531,7 +531,7 @@
             </p>
             
 
-            <h3>Leverage Technology and Automation:</h3>
+            <h3 class="gradientText">Leverage Technology and Automation:</h3>
 
             <p>
                 Technology can significantly enhance the efficiency and effectiveness of volume hiring processes. Implementing the following strategies can save time and streamline recruitment:
@@ -545,7 +545,7 @@
                 </ol>
             </p>
 
-            <h3>Optimize Job Advertisements:</h3>
+            <h3 class="gradientText">Optimize Job Advertisements:</h3>
 
             <p>
                 Crafting compelling and targeted job advertisements is essential for attracting a high volume of qualified applicants. Consider the following tips:
@@ -559,7 +559,7 @@
                 </ol>
             </p>
 
-            <h3>Streamline the Screening and Interviewing Process:</h3>
+            <h3 class="gradientText">Streamline the Screening and Interviewing Process:</h3>
 
             <p>
                 When dealing with a large number of applicants, it is crucial to have an efficient screening and interviewing process in place. Consider the following strategies:
@@ -576,7 +576,7 @@
                 </ol>
             </p>
             
-            <h3>Establish a Candidate Pool and Talent Pipeline:</h3>
+            <h3 class="gradientText">Establish a Candidate Pool and Talent Pipeline:</h3>
 
             <p>
                 Building a candidate pool and talent pipeline can help organizations expedite future hiring needs and minimize time-to-fill positions. Consider the following practices:
@@ -690,7 +690,7 @@
           </ul>
           <div class="mt-10">
             <div class="mb-5">
-              <h3>Leave A Comment</h3>
+              <h3 class="gradientText">Leave A Comment</h3>
             </div>
             <form id="contact-form" class="row" method="post" action="contact.php">
               <div class="messages"></div>
