--- a/blogs.html
+++ b/blogs.html
@@ -474,7 +474,7 @@
           </div>
         </div> -->
         <nav aria-label="breadcrumb" class="page-breadcrumb">
-          <ol class="breadcrumb">
+          <ol class="breadcrumb blogSubtitle">
             <li class="breadcrumb-item"><a href="blogs.html"><i class="las la-asterisk me-1 rotate"></i>Shaping Solutions, Sharing Knowledge</a>
             </li>
           </ol>
