--- a/header.html
+++ b/header.html
@@ -308,12 +308,12 @@
                     >
                     <ul class="dropdown-menu">
                       <li>
-                        <a class="dropdown-item" href="error-404.html"
+                        <a class="dropdown-item" href="blogs.html"
                           >Blogs</a
                         >
                       </li>
                       <li>
-                        <a class="dropdown-item" href="error-404.html"
+                        <a class="dropdown-item" href="articles.html"
                           >Article</a
                         >
                       </li>
