--- a/articles.html
+++ b/articles.html
@@ -450,6 +450,8 @@
 
 <!--hero section start-->
 
+<div class="articlepage">
+  
 <section class="main-article-page page-title">
   <div class="container">
     <div class="row justify-content-center text-center">
@@ -472,7 +474,6 @@
 </section>
 
 <!--hero section end--> 
-
 
 <!--body content start-->
 
@@ -501,6 +502,9 @@
     </div>
   </div>
 </section>
+
+
+</div>
 
 <!--project end-->
 
