--- a/blog-ocr.html
+++ b/blog-ocr.html
@@ -433,7 +433,7 @@
     <div class="row justify-content-center text-center">
       <div class="col-lg-8">
         <div class="theme-breadcrumb-box">
-        <h3>Improve Data Accuracy in Insurance Claim Processing with OCR Technology</h3>
+        <h3 class="blog-title gradientText">Improve Data Accuracy in Insurance Claim Processing with OCR Technology</h3>
         <nav aria-label="breadcrumb" class="page-breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="blog-right-sidebar.html"><i class="las la-home me-1"></i>Blogs</a>
@@ -454,7 +454,7 @@
 
 <!--body content start-->
 
-<div class="page-content">
+<div class="blogpage page-content">
 
 <!--blog start-->
 
@@ -500,7 +500,7 @@
               <p>"studies have found that manual claims processing takes up to 14 days while automated claims processing can take up just a few hours."</p>
             </blockquote>
 
-            <h2>How Does OCR Transform the Insurance Claim Process?</h2>
+            <h2 class="gradientText">How Does OCR Transform the Insurance Claim Process?</h2>
 
             <p>OCR is a technology that enables the conversion of scanned images, documents, or other sources into digital data. It helps transform the insurance claim process by automating data extraction from insurance claims documents, such as policyholder information, medical record, accident reports, and more. This automated process eliminates the need for manual data entry allowing faster and more accurate processing.</p>
             <div class="row mb-5">
@@ -513,31 +513,31 @@
             </div>
             <p>Insurers can reduce claims processing times, improve data accuracy, and reduce operational costs by streamlining the data extraction process. As per reports, insurers can save costs up to 60% by automating claim processing with OCR technology.</p>
 
-            <h2>Benefits of Using OCR to Automate Insurance Claims</h2>
+            <h2 class="gradientText">Benefits of Using OCR to Automate Insurance Claims</h2>
             <p>Utilising OCR and AI together for claims processing has many advantages. The productivity of your business may be impacted by these advantages, which will also have an effect on your bottom line.
             </p>
 
-            <h3>Faster Claims Processing</h3>
+            <h3 class="gradientText">Faster Claims Processing</h3>
             <p>Large volumes of claim documents can be processed in a fraction of the time, reducing claims processing times and improving customer satisfaction. In a survey, 66% of customers said they would be willing to switch insurers for faster claim processing times.</p>
 
-            <h3>Improved Data Accuracy</h3>
+            <h3 class="gradientText">Improved Data Accuracy</h3>
             <p>By reducing the risk of errors that can occur during manual data entry, this ensures that claims are processed accurately and that customers receive the correct payout.</p>
 
-            <h3>Enhanced Customer Experience</h3>
+            <h3 class="gradientText">Enhanced Customer Experience</h3>
             <p>By automating the claims process, insurers can provide a faster, more convenient, and hassle-free claims experience for their customers. According to McKinsey, by automating claims processes, insurers can improve their customer satisfaction rates by up to 30%.</p>
 
-            <h3>Improved Compliance </h3>
+            <h3 class="gradientText">Improved Compliance </h3>
             <p>Helps insurers to meet regulatory requirements by ensuring that all necessary data is captured and recorded accurately.</p>
 
-            <h3>Better Data Analytics</h3>
+            <h3 class="gradientText">Better Data Analytics</h3>
             <p>By digitizing claims documents and extracting data, insurers can gain insights into claims trends and patterns, enabling them to make data-driven decisions.</p>
 
-            <h3>Competitive Advantage:</h3>
+            <h3 class="gradientText">Competitive Advantage:</h3>
             <p>By automating the claims process using OCR, insurers can gain a competitive advantage by providing faster and more efficient claims processing, leading to increased customer loyalty and retention.</p>
 
-            <h2>Automate Your Claim Processing with Bautomate</h2>
+            <h2 class="gradientText">Automate Your Claim Processing with Bautomate</h2>
             <p>
-                <a href="www.bautomate.com" target="_blank"><span class="gradientText">Bautomate</span></a> is an AI-powered automation solution that enables insurance firms to automate document-related workflows with OCR technology. Our solution can be used to automate data extraction, which eliminates all manual data entry tasks in your claims processing workflow.
+                <a href="www.bautomate.com" target="_blank"><span class="gradientTextAnimated">Bautomate</span></a> is an AI-powered automation solution that enables insurance firms to automate document-related workflows with OCR technology. Our solution can be used to automate data extraction, which eliminates all manual data entry tasks in your claims processing workflow.
                 <br><br>
                 With Bautomate, you can mitigate fraud risk, speed up turnaround time, and lower the cost of processing claims.
             </p>
@@ -626,7 +626,7 @@
           </ul>
           <div class="mt-10">
             <div class="mb-5">
-              <h3>Leave A Comment</h3>
+              <h3 class="gradientText">Leave A Comment</h3>
             </div>
             <form id="contact-form" class="row" method="post" action="contact.php">
               <div class="messages"></div>
