home, big data modifications

--- a/bigdata-consulting-services.html
+++ b/bigdata-consulting-services.html
@@ -466,17 +466,13 @@
 
 
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('images/services_Images/EIS/image.png');">
+  <div class="banner-img" style="background-image: url('images/bg/bigdata-banner.png');">
     <div class="banner-content">
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-xl-10 col-lg-12 col-12">
             <h1 class="mb-4 mt-5">Big Data Consulting Services</h1>
-            <p class="mt-5">As a premier big data development and consulting company,
-              SMI Technology LLC offers a comprehensive range of big data
-              services tailored for businesses across diverse industries,
-              including Advertising, Retail, FinTech, Telecommunications,
-              Healthcare, and beyond.</p>  
+            <p class="mt-5">SMI Technology LLC provides tailored big data services for businesses in industries like Advertising, Retail, FinTech, Telecommunications, and Healthcare.</p>  
           </div>  
         </div>
       </div>
@@ -665,7 +661,7 @@
           <!-- Webex Service Item -->
           <div class="service-item1 style-1">
             <div class="service-image">
-              <img src="images/services/it-solutions.avif" class="img-fluid" alt="" decoding="async">
+              <img src="images/services/it-solutions.png" class="img-fluid" alt="" decoding="async">
             </div>
             <div class="service-desc">
               <div class="service-title">
@@ -683,7 +679,7 @@
           <!-- ERP Application Service Item -->
           <div class="service-item1 style-1">
             <div class="service-image">
-              <img src="images/services/transparency.jpg" class="img-fluid" alt="">
+              <img src="images/services/transparency.png" class="img-fluid" alt="">
             </div>
             <div class="service-desc">
               <div class="service-title">
@@ -701,7 +697,7 @@
           <!-- DOM Service Item (Active) -->
           <div class="service-item1 style-1 active">
             <div class="service-image">
-              <img src="images/services/zero-billing.jpg" class="img-fluid" alt="">
+              <img src="images/services/billing.png" class="img-fluid" alt="">
             </div>
             <div class="service-desc">
               <div class="service-title">
@@ -721,61 +717,6 @@
     
   </div>
 </section>
-
-        <section class="demopage-content">
-          <div class="container">
-            <div class="row justify-content-center text-center mb-5">
-              <div class="col-lg-8 col-md-12">
-                <div class="theme-title">
-                  <h6>Solutions</h6>
-                  <h3>
-                    DRIVING PROJECTS FROM IDEATION TO VALUE-DRIVEN SOFTWARE
-                    SOLUTIONS
-                  </h3>
-                </div>
-              </div>
-            </div>
-            <div class="row position-relative">
-              <!-- Left Navigation Button -->
-              <button class="nav-btn left-btn" onclick="navigateContent(-1)">
-               <
-              </button>
-
-              <!-- Image and Content Section -->
-              <div
-                class="col-12 col-lg-7 mb-6 mb-lg-0 position-relative service-image-con"
-              >
-                <div class="service-image">
-                  <img
-                    id="serviceImage"
-                    src="images/services/zero-billing.jpg"
-                    class="img-fluid"
-                    alt="Oil and Gas"
-                  />
-                </div>
-
-                <!-- Overlayed Content Section -->
-                <div class="overlayed-card">
-                  <div class="service-content">
-                    <span id="serviceCategory" class="category">Assurance</span>
-                    <h2 id="serviceTitle" class="h2">
-                      Zero Billing Guarantee 
-
-                    </h2>
-                    <p id="serviceDescription">
-                      We offer a Zero Billing Guarantee: if our services don't meet your expectations, you won't be charged or will receive a full refund. Your satisfaction is our priority. 
-                    </p>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Right Navigation Button -->
-              <button class="nav-btn right-btn" onclick="navigateContent(1)">
-                >
-              </button>
-            </div>
-          </div>
-        </section>
 
 
 <section class="form-container-unique">
